# backpropagation-impl

./: CMakeLists.txt
backpropagation/: CMakeLists.txt
backpropagation/include/: backpropagation.h  common.h  nn.h  random_engine.h
backpropagation/src/: backpropagation.cpp  common.cpp  nn.cpp  random_engine.cpp
test/: CMakeLists.txt
test/src/: main.cpp
